# pumpfun-comment-bot

./: .gitignore  Cargo.toml
src/: generate_wallet.rs  main.rs  pumpfun_comment.rs
