[package]
name = "pumpfun-comment-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
base58 = "0.2.0"
bs58 = "0.5.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-sdk = "2.3.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
